# everydayscanA

./: .gitignore  README.md  aggregate.py  config.yaml  index.html  requirements.txt  run_all.sh
.github/workflows/: daily-run.yml
config/: concepts.yaml
output/: .run_status.json  _oneoff_compare_data.json  index.html  unified_all_picks.csv  unified_dashboard.html  unified_wechat.txt
quant_data/: __init__.py  concepts.py  fetcher.py  provider.py  storage.py
strategies/lh_quant/: CHANGELOG.md  README.md  SESSION_HANDOFF.md  _do_replace.py  _do_replace2.py  _new_run.py  analyze_rally_nodes.py  backtest_strategy.py  build_dashboard.py  execution_policy.py  grid_search_backtest.py  lh_quant_app.py  new_run_daily_selection.txt  qclaw_rule_stability_replay.py  qclaw_signal_regime_audit.py  searchv1.py  storage_ipo_scan.py  update_signal_journal.py  update_tracking_register.py
strategies/lh_quant/config/: backtest_dynamic_decay_frozen.json  backtest_risk.json  box_monitor_config.json  cross_flow.json  cross_flow_regimes.json  floating_pnl_regimes.json  risk.json  themes.json  (+4 more)
strategies/ph_afterclose/: pyproject.toml  run.sh
strategies/ph_afterclose/src/afterclose_scan/: __init__.py  automation.py  cli.py  config.py  models.py  performance.py  reporting.py  scoring.py  static_dashboard.py  tushare_client.py
strategies/ql_dragon/: requirements.txt
strategies/zhush_mainrise/: dashboard.html  data_fetcher.py  dragons_candidates.csv  dragons_candidates.meta.json  html_dashboard.py  main.py  metrics.py  requirements.txt  scanner.py  tushare_token.py  wechat_share.txt
(+35 files in other folders)
